--- a/todos-app-with-backend/todo-frontend/package.json
+++ b/todos-app-with-backend/todo-frontend/package.json
@@ -19,6 +19,7 @@
     "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
+    "axios": "^0.20.0",
     "lodash": "^4.17.20",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
